<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="120dp"
    android:layout_height="140dp" >

    <ImageView
        android:id="@+id/add_new_city_image_view"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:background="@drawable/add_city_board"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_add"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/add_city_main_layout"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:background="@drawable/bg_add_city"
        android:visibility="visible" >

        <ImageView
            android:id="@+id/icon_weather_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/settings_icon_city_w_03"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/temperature_lower_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="6dp"
            android:layout_marginTop="18dp"
            android:text="@string/default_tempture" />

        <TextView
            android:id="@+id/temperature_higher_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/temperature_lower_text_view"
            android:layout_marginRight="6dp"
            android:layout_marginTop="10dp"
            android:text="@string/default_tempture" />

        <TextView
            android:id="@+id/weather_status_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottom_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="6dp"
            android:text="@string/default_weather" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/bottom_layout"
            android:layout_marginBottom="-2dp"
            android:background="#502c2c2c" />

        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="1dp"
            android:background="#cfe2e2e2"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/icon_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_icon_locate"
                android:contentDescription="@string/app_name"
                android:visibility="gone" />

            <TextView
                android:id="@+id/city_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/default_city" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>